--- a/firebase.json
+++ b/firebase.json
@@ -1,20 +1,14 @@
 {
   "firestore": {
-    "rules": "Y",
-    "indexes": "Y"
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "build",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   }
 }
